we comment thi line useNewUrlParser from db.js file beacuse render not accept this line

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 3000
 MONGODB_URL= mongodb+srv://kingcoder2002:kingcoder2002@cluster0.at6wg.mongodb.net/
 
-MONGODB_URL_Local= mongodb://localhost:27017/hotels   
+# MONGODB_URL_Local= mongodb://localhost:27017/hotels   
  
